--- a/src/apps/Uno/H.ReactiveUI.Apps.Uno.WebAssembly/H.ReactiveUI.Apps.Uno.WebAssembly.csproj
+++ b/src/apps/Uno/H.ReactiveUI.Apps.Uno.WebAssembly/H.ReactiveUI.Apps.Uno.WebAssembly.csproj
@@ -6,6 +6,7 @@
     <NoWarn>$(NoWarn);NU1701;CS8669;UXAML0002;CS1030;Uno0001</NoWarn>
     <DefineConstants>$(DefineConstants);HAS_WINUI</DefineConstants>
     <ImplicitUsings>disable</ImplicitUsings>
+    <WasmShellILLinkerEnabled>false</WasmShellILLinkerEnabled>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
