--- a/src/apps/H.ReactiveUI.Apps.Uwp/H.ReactiveUI.Apps.Uwp.csproj
+++ b/src/apps/H.ReactiveUI.Apps.Uwp/H.ReactiveUI.Apps.Uwp.csproj
@@ -116,6 +116,21 @@
     <None Include="H.ReactiveUI.Apps.Uwp_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="ViewBaseGenerator" Version="1.8.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <PropertyGroup>
+    <ViewBaseGenerator_Namespace>HReactiveUI.Apps.Views</ViewBaseGenerator_Namespace>
+  </PropertyGroup>
+
+  <ItemGroup Label="View Base">
+    <AdditionalFiles Include="..\H.ReactiveUI.Apps.Uno.Shared\Views\**\*.xaml" ViewBaseGenerator_GenerateViewBase="True" ViewBaseGenerator_BaseClass="ReactiveUI.ReactiveUserControl" ViewBaseGenerator_ViewModelNamespace="H.ReactiveUI.Apps.ViewModels" Visible="False" />
+    <AdditionalFiles Update="..\H.ReactiveUI.Apps.Uno.Shared\Views\MainView.xaml" ViewBaseGenerator_BaseClass="ReactiveUI.ReactivePage" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
     <Content Include="Assets\Square150x150Logo.scale-200.png" />
