--- a/src/apps/H.ReactiveUI.Apps.WinUI/H.ReactiveUI.Apps.WinUI.csproj
+++ b/src/apps/H.ReactiveUI.Apps.WinUI/H.ReactiveUI.Apps.WinUI.csproj
@@ -4,7 +4,6 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows10.0.18362.0</TargetFramework>
     <Platforms>x86;x64;arm64</Platforms>
-    <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
     <UseWinUI>true</UseWinUI>
     <DefineConstants>$(DefineConstants);HAS_WINUI</DefineConstants>
     <!--<WindowsPackageType>None</WindowsPackageType>-->
@@ -21,12 +20,25 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.25145-preview" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.25151-preview" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="ReactiveUI.WinUI" Version="17.1.50" />
+    <PackageReference Include="ViewBaseGenerator" Version="1.8.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <PropertyGroup>
+    <ViewBaseGenerator_Namespace>HReactiveUI.Apps.Views</ViewBaseGenerator_Namespace>
+  </PropertyGroup>
+
+  <ItemGroup Label="View Base">
+    <AdditionalFiles Include="..\H.ReactiveUI.Apps.Uno.Shared\Views\**\*.xaml" ViewBaseGenerator_GenerateViewBase="True" ViewBaseGenerator_BaseClass="ReactiveUI.ReactiveUserControl" ViewBaseGenerator_ViewModelNamespace="H.ReactiveUI.Apps.ViewModels" Visible="False" />
+    <AdditionalFiles Update="..\H.ReactiveUI.Apps.Uno.Shared\Views\MainView.xaml" ViewBaseGenerator_BaseClass="ReactiveUI.ReactivePage" />
   </ItemGroup>
 
   <ItemGroup>
