--- a/src/apps/Uno/H.ReactiveUI.Apps.Uno.Skia.Wpf/H.ReactiveUI.Apps.Uno.Skia.Wpf.csproj
+++ b/src/apps/Uno/H.ReactiveUI.Apps.Uno.Skia.Wpf/H.ReactiveUI.Apps.Uno.Skia.Wpf.csproj
@@ -23,10 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ReactiveUI.Uno.WinUI" Version="17.1.50" />
     <PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.4.13" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.4.13" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.4.13" />
     <PackageReference Include="ReactiveMarbles.ObservableEvents.SourceGenerator" Version="1.1.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -34,11 +32,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\H.ReactiveUI.Apps.Core\H.ReactiveUI.Apps.Core.csproj" />
-    <ProjectReference Include="..\..\..\libs\H.ReactiveUI.CommonInteractions.Uno.WinUI\H.ReactiveUI.CommonInteractions.Uno.WinUI.csproj" />
+    <ProjectReference Include="..\H.ReactiveUI.Apps.Uno.Core\H.ReactiveUI.Apps.Uno.Core.csproj" />
   </ItemGroup>
 
   <Import Project="..\..\H.ReactiveUI.Apps.Shared\H.ReactiveUI.Apps.Shared.projitems" Label="Shared" />
   <Import Project="..\..\H.ReactiveUI.Apps.Uno.Shared\H.ReactiveUI.Apps.Uno.Shared.projitems" Label="Shared" />
+
+  <!-- Workaround for https://github.com/unoplatform/uno/issues/9241 -->
+  <ItemGroup Label="GlobalUsings">
+    <Using Include="H.ReactiveUI.Apps.Uno.Extensions" />
+  </ItemGroup>
 
 </Project>
