--- a/src/libs/H.ReactiveUI.CommonInteractions.Core/H.ReactiveUI.CommonInteractions.Core.csproj
+++ b/src/libs/H.ReactiveUI.CommonInteractions.Core/H.ReactiveUI.CommonInteractions.Core.csproj
@@ -22,4 +22,11 @@
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="IsExternalInit" Version="1.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
