--- a/src/libs/Mvvm.CommonInteractions.Avalonia/Mvvm.CommonInteractions.Avalonia.csproj
+++ b/src/libs/Mvvm.CommonInteractions.Avalonia/Mvvm.CommonInteractions.Avalonia.csproj
@@ -14,6 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
