--- a/src/libs/Mvvm.CommonInteractions.Uno.WinUI/Mvvm.CommonInteractions.Uno.WinUI.csproj
+++ b/src/libs/Mvvm.CommonInteractions.Uno.WinUI/Mvvm.CommonInteractions.Uno.WinUI.csproj
@@ -17,6 +17,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
