--- a/src/libs/Mvvm.CommonInteractions.Core/Mvvm.CommonInteractions.Core.csproj
+++ b/src/libs/Mvvm.CommonInteractions.Core/Mvvm.CommonInteractions.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net4.6.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net4.6.1;net6.0;net7.0</TargetFrameworks>
     <RootNamespace>Mvvm.CommonInteractions</RootNamespace>
     <NoWarn>$(NoWarn);CA1819;CA1014;CS8002</NoWarn>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
