--- a/src/libs/Mvvm.CommonInteractions.Avalonia/Mvvm.CommonInteractions.Avalonia.csproj
+++ b/src/libs/Mvvm.CommonInteractions.Avalonia/Mvvm.CommonInteractions.Avalonia.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.10.18" />
-    <PackageReference Include="Avalonia.Diagnostics" Version="0.10.18" Condition="'$(Configuration)' == 'Debug'" />
+    <PackageReference Include="Avalonia" Version="11.0.0-preview4" />
+    <PackageReference Include="Avalonia.Diagnostics" Version="11.0.0-preview4" Condition="'$(Configuration)' == 'Debug'" />
     <PackageReference Include="MessageBox.Avalonia" Version="2.2.0" />
     <PackageReference Include="DependencyPropertyGenerator" Version="1.0.3">
       <PrivateAssets>all</PrivateAssets>
