--- a/src/libs/Directory.Build.props
+++ b/src/libs/Directory.Build.props
@@ -35,8 +35,8 @@ $(PACKAGE_RELEASE_NOTES)
   </PropertyGroup>
 
   <ItemGroup Label="Nuget">
-    <None Include="$(SolutionDir)assets\nuget_icon.png" Pack="true" PackagePath="\" Visible="false" />
-    <None Include="$(SolutionDir)README.md" Pack="true" PackagePath="\" Visible="false" />
+    <None Include="$(MSBuildThisFileDirectory)../../assets/nuget_icon.png" Pack="true" PackagePath="\" Visible="false" />
+    <None Include="$(MSBuildThisFileDirectory)../../README.md" Pack="true" PackagePath="\" Visible="false" />
   </ItemGroup>
   
   <ItemGroup Label="Source Link">
